# tflite-object-detection

./: .gitmodules  CMakeLists.txt  README.md
doc/: cross-compile-raspi-64-bit.md
examples/: CMakeLists.txt
examples/camera_stream/: CMakeLists.txt  config.txt  main.cpp
examples/minimal/: CMakeLists.txt  main.cpp
include/: Common.h  Config.h  ObjectDetector.h
src/: CMakeLists.txt  Common.cpp  Config.cpp  ObjectDetector.cpp
